# ninja-extended

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint_format.yml  test.yml
ninja_extended/: __init__.py  utils.py
ninja_extended/api/: __init__.py  api.py  errors.py  operation.py  registry.py  router.py  utils.py
ninja_extended/auth/: __init__.py  api_key_cookie.py  session.py
ninja_extended/errors/: __init__.py  authentication.py  authorization.py  base.py  check_constraint.py  csrf.py  multiple_objects_returned.py  not_found.py  not_null_constraint.py  protected.py  resource.py  unique_constraint.py  validation.py  with_fields.py
ninja_extended/errors/integrity/: __init__.py  base.py  postgres.py  sqlite3.py  types.py
ninja_extended/fields/: __init__.py  base.py  bool.py  date.py  datetime.py  email.py  int.py  string.py
ninja_extended/pagination/: __init__.py  page_number_page_size.py
ninja_extended/sorting/: __init__.py  sort_schema.py
tests/: __init__.py  conftest.py  test_demo.py  test_dummy.py  test_utils.py
tests/api/: conftest.py  test_api.py  test_registry.py  test_router.py  test_utils.py
tests/demo/api/: api.py  errors.py  models.py  schemas.py
tests/demo/api/migrations/: 0001_initial.py  0002_resource_value_check_resource_value_check_gte_0.py  0003_childmodel.py  0004_child1_child2_delete_childmodel.py
tests/demo/demo/: settings.py  urls.py
tests/errors/: resource_errors.py  test_authentication.py  test_authorization.py  test_check_constraint.py  test_csrf.py  test_integrity_postgres.py  test_integrity_sqlite.py  test_multiple_objects_returned.py  test_not_found.py  test_not_null_constraint.py  test_protected.py  test_unique_constraint.py
tests/fields/: test_base.py  test_bool.py  test_date.py  test_datetime.py  test_email.py  test_int.py  test_string.py
