[project]
name = "ninja-extended"
version = "0.1.0"
description = "Extensions for Django Ninja"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "django-ninja>=1.3.0",
    "pydantic[email]>=2.10.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "uv>=0.5.1",
]
